--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html, body {
 
 canvas {
   display: block;
-  /* padding-left: 30em;
-  padding-top: 10em; */
+  
+  /* padding-left: 24em; */
+  /* padding-top: 10em; */
 }
